# pre-commit-buildifier

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/: pre_commit_buildifier.py
