[tool.poetry]
name = "pre-commit-buildifier"
version = "0.0.2"
description = "Pre-commit hook which downloads and runs bazel buildifier"
authors = [
    "Bohdan Vanieiev <bohdan.vanieiev@aptiv.com>",
]
exclude = [
    # ignore all tests
    'tests',
    'src/**/*_test.py',
    'src/**/test_*.py',
]

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
isort = "^5.10.1"
pyupgrade = "^2.37.3"

[tool.poetry.scripts]
pre-commit-buildifier = 'pre_commit_buildifier:main'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "tests", "**/*_test.py", "**/test_*.py"]
skips = ["B101"]

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true

[tool.black]
line-length = 88
target_version = ['py37', 'py38', 'py39', 'py310', 'py311']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
